# techblog-zozomat-cross-platform-3d

./: .gitignore  LICENSE.txt  README.md
android/ztr-android/app/: build.gradle
android/ztr-android/app/src/androidTest/java/zozo/com/ztr-android/: ExampleInstrumentedTest.kt
android/ztr-android/app/src/main/: AndroidManifest.xml
android/ztr-android/app/src/main/cpp/: CMakeLists.txt  RenderLib_ndk.cpp  ztr_ndk.cpp
android/ztr-android/app/src/main/java/com/zozo/ztr_android/: LabelCreator.kt  MainActivity.kt  RenderLib.kt  RenderView.kt  ZTRJNILib.kt  ZTRJNIView.kt
android/ztr-android/app/src/main/res/values/: strings.xml
android/ztr-android/app/src/test/java/zozo/com/ztr-android/: ExampleUnitTest.kt
android/ztr-android/gradle/wrapper/: gradle-wrapper.properties
common/: HandmadeMath.h  foot_renderer.cpp  foot_renderer.h  platform_abstraction_layer.h  platform_independent_layer.cpp  tinyobj_loader_c.h  ztr_platform_abstraction_layer.h  ztr_platform_independent_layer.cpp
ios/ztr-ios/: AppDelegate.h  AppDelegate.m  RenderView.h  RenderView.m  SceneDelegate.m  ZTRGLView.h  ZTRGLView.m  main.m
ios/ztr-ios.xcodeproj/: project.pbxproj
ios/ztr-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/ztr-ios/Base.lproj/: Main.storyboard
osx/ztr-osx/: AppDelegate.h  AppDelegate.m  Info.plist  RenderViewController.h  RenderViewController.m  ViewController.h  ViewController.m  main.m
osx/ztr-osx.xcodeproj/: project.pbxproj
osx/ztr-osx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx/ztr-osx/Base.lproj/: Main.storyboard
res/shaders/: object_frag.glsl  object_vert.glsl
